<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000099cc">

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_location"
        android:gravity="center"
        android:text="@string/default_tv_summary"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/iv_temp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_summary"
        app:srcCompat="@drawable/therm" />

    <ImageView
        android:id="@+id/iv_humidity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/iv_temp"
        android:layout_marginEnd="139dp"
        app:srcCompat="@drawable/percent" />

    <ImageView
        android:id="@+id/iv_speed"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iv_temp"
        app:srcCompat="@drawable/speed" />

    <ImageView
        android:id="@+id/iv_direction"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/iv_humidity"
        android:layout_below="@+id/iv_temp"
        app:srcCompat="@drawable/compass" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/default_tv_summary"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_temp_head"
        android:layout_marginStart="118dp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_direction_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_speed_head"
        android:layout_marginEnd="36dp"
        android:text="@string/tv_direction_head"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_wind_direction"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/iv_speed"
        android:layout_alignStart="@+id/tv_temp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_temp_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_summary"
        android:layout_marginStart="77dp"
        android:text="@string/tv_temp_head"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_speed_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_temp_head"
        android:layout_below="@+id/iv_temp"
        android:text="@string/tv_speed_head"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_direction"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/iv_speed"
        android:layout_alignStart="@+id/tv_humidity"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_humidity_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/iv_temp"
        android:layout_marginEnd="55dp"
        android:text="@string/tv_humidity_head"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_temp"
        android:layout_marginEnd="77dp"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/iv_cloud"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iv_speed"
        app:srcCompat="@drawable/cloud" />

</RelativeLayout>